--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
         <activity
-            android:name=".homework2.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.App.NoActionBar">
             <intent-filter>
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".homework6.Homework6Activity"/>
+        <activity android:name=".homework7.Registry"/>
     </application>
 
 </manifest>
