--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".homework6.Homework6Activity"/>
         <activity android:name=".homework7.Registry"/>
+        <activity android:name=".homework7.Information"/>
     </application>
 
 </manifest>
