--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
 }
 
 android {
+
+
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -30,8 +32,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding true
+
+    viewBinding {
+        enabled = true
     }
 }
 
