--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".homework7.Registry"/>
         <activity android:name=".homework7.Information"/>
         <activity android:name=".homework8.ActivityList"/>
+        <activity android:name=".homework10.MainActivity"/>
     </application>
 
 </manifest>
