--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,11 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
     implementation("androidx.fragment:fragment-ktx:1.3.5")
 
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-runtime:2.3.0"
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
