--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".homework8.ActivityList"/>
         <activity android:name=".homework10.GeneralActivity"/>
         <activity android:name=".homework11.Main"/>
+        <activity android:name=".homework12.Main"/>
     </application>
 
 </manifest>
